# iracepy

./: Makefile  README.md  example_dual_annealing.py  install.py  irace.py  pyproject.toml  python-requirements.txt  requirements.txt
.github/workflows/: release.yml  test-dev.yml  test.yml
examples/: dual_annealing.py  parameters_definition.py
src/irace/: __init__.py  errors.py  expressions.py  parameters.py
src/irace/compatibility/: config_space.py
tests/: test_conditional_parameters.py  test_config_space.py  test_daemon_process.py  test_data_conversion.py  test_data_passable.py  test_defaul_digits.py  test_default_digits.py  test_dual_annealing.py  test_errors.py  test_functor.py  test_r_to_python.py  test_read_configurations.py  test_read_parameters.py  utils.py
