[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irace"
version = "0.0.1"
authors = [
    {name = "Manuel López-Ibáñez", email = "manuel.lopez-ibanez@manchester.ac.uk"},
    {name = "Deyao Chen", email = "chendeyao000@gmail.com"}
]

description = "A python binding for irace"
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "rpy2 >= 3.5.6,<3.5.13",
    "scipy",
    "pandas >= 1.0.0"
]

[projects.urls]
"Homepage" = "https://github.com/auto-optimization/iracepy"
"Bug Tracker" = "https://github.com/auto-optimization/iracepy/issues"